# zw_to_anki

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yaml
src/: anki.rs  dict.rs  lib.rs  main.rs  pinyin.rs  tts.rs
