[package]
name = "zw_to_anki"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
cjk = "0.2.5"
clap = { version = "4.4.6", features = ["derive"] }
futures = "0.3.29"
genanki-rs = { git = "https://github.com/jacksonriley/genanki-rs" } # Use version from crates.io when https://github.com/yannickfunk/genanki-rs/pull/15 gets merged
hsk = "0.1.0"
jieba-rs = "0.6.8"
percent-encoding = "2.3.0"
reqwest = "0.11.22"
tokio = { version = "1.33.0", features = ["full"] }
